gitops/tenants/tenant-sass-common/base/authserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://tenark.vault.azure.net/certificates/aks-certificate-tenark/faad9bb180d44d7a92a310298c1891b7
  name: authserver-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: authserver.tenark.com
    http:
      paths:
      - backend:
          service:
            name: tenark-authserver-service
            port:
              number: 8081
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - authserver.tenark.com
    secretName: keyvault-authserver-ingress
